2006-03-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Versions: Export sync_file_range with
	GLIBC_2.5.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Remove
	LINUX_FADV_ASYNC_WRITE and LINUX_FADV_WRITE_WAIT.
	Declare sync_file_range and splice.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/wordsize-64/syscalls.list: Add
	sync_file_range.
	* sysdeps/unix/sysv/linux/i386/sync_file_range.S: New file.
	* sysdeps/unix/sysv/linux/syscalls.list: Add splice syscall.
	* sysdeps/unix/sysv/linux/Versions: Export splice with GLIBC_2.5
	version.
	* Versions.def: Define GLIBC_2.5 for libc.

2006-03-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): No need to duplicate
	'name' for 'canon'.  The final allocation will happen later.

2006-03-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Remove support for
	architectures which moved to ports.

	* sysdeps/unix/sysv/linux/kernel-features.h: Add
	__ASSUME_SET_ROBUST_LIST.

2006-03-27  Jakub Jelinek  <jakub@redhat.com>

	* wcsmbs/wchar.h (btowc, wctob): Don't optimize in C++.

2006-03-24  David S. Miller  <davem@sunset.davemloft.net>

	* sysdeps/sparc/sparc32/bits/atomic.h
	(__v9_compare_and_exchange_val_32_acq): Add "memory" clobber.
	* sysdeps/sparc/sparc32/sparcv9/bits/atomic.h
	(__arch_compare_and_exchange_val_32_acq, atomic_exchange_acq):
	Likewise.
	* sysdeps/sparc/sparc64/bits/atomic.h
	(__arch_compare_and_exchange_val_32_acq,
	__arch_compare_and_exchange_val_64_acq, atomic_exchange_acq): Likewise.

2006-03-24  Jakub Jelinek  <jakub@redhat.com>
